--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,2 +1,3 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
 
+body{  font-family: "Roboto Condensed", sans-serif; }
